deps/v8/test/message/fail/invalid-spread-2.out
*%(basename)s:7: SyntaxError: Rest parameter must be last formal parameter
(x, ...y, z)
       ^
SyntaxError: Rest parameter must be last formal parameter
